# block-mesh-monorepo

./: .dockerignore  .env.sample  .gitattributes  .gitignore  .gitmodules  Anchor.toml  Cargo.toml  DEMO.md  DOC  Dockerfile  README.md  REFERENCES.md  SECURITY.md  bla.sh  block-mesh-manager-api.Dockerfile  block-mesh-manager-worker.Dockerfile  block-mesh-manager.Dockerfile  blockmesh-cli.Dockerfile  blockmesh-pghero.Dockerfile  claims.css  doc  extension-input.css  extension.css  feature-flags-server.Dockerfile  input  input.css  output-server.css  package.json  pghero.yml  snag-llms-full.txt  snag-llms.txt  solita-merkle-distributor.ts  solita.ts  tailwind.config.js  tsconfig.json  vite.config.ts
libs/ai-interface/: Cargo.toml
libs/ai-interface/src/: ai_constants.rs  anthropic.rs  google.rs  lib.rs  meta.rs  mistral.rs  openai.rs  questions.rs
libs/ai-interfaces/: Cargo.toml
libs/ai-interfaces/src/: error.rs  lib.rs
libs/axum-ws-extractor/: Cargo.toml
libs/axum-ws-extractor/src/: lib.rs  macros.rs  rejections.rs
libs/block-mesh-collector/: Cargo.toml
libs/block-mesh-collector/.sqlx/: query-1a10c59495c3e7b496e897bcb12d7e618784081e5beca5c1adb5940c297ce24c.json  query-3fa222fb7f95901245ab636a84f627463763fd54d76f8a9bb943dfba62add826.json  query-41bbf8f4529826a4ca49f1d064e422e5c64fbf8be7d8414fe278ba843817d84f.json  query-e924c72c287fa684d22600950fb6763775243c359134860271f32c85770917ab.json
libs/block-mesh-collector/migrations/: 20250424101720_create_collector_data.sql  20250426101722_collector-daily-stats.sql
libs/block-mesh-collector/src/: collector_data.rs  cron_jobs.rs  errors.rs  main.rs  routes.rs
libs/block-mesh-common/: Cargo.toml
libs/block-mesh-common/src/: app_config.rs  chrome_storage.rs  cli.rs  constants.rs  date.rs  feature_flag_client.rs  http.rs  interface.rs  intract.rs  leptos_tracing.rs  lib.rs  points.rs  rand.rs  reqwest.rs  routes_enum.rs  solana.rs  solana_wasm.rs  tauri_message_channel.rs  tracing.rs
libs/block-mesh-manager/: Cargo.toml  README.md
libs/block-mesh-manager-api/: Cargo.toml
libs/block-mesh-manager-api/.sqlx/: query-016abd19e5bf13800458af88a50345e486abf8ad3f347585dada0bb2d600b549.json  query-9a3a81e9964ebf5981c7a6192dbcd6c5d424537204d126600f49236a3a58c804.json  query-b8929dbb37602b640e54e519ff2da7d45450b13841b7a8607dc997acd063b6eb.json  query-fb7ced9356d46945f5102539da181d7a549af484b9a1606b6ebf5c6a70549d8c.json
libs/block-mesh-manager-api/src/: error.rs  main.rs  pg_listener.rs
libs/block-mesh-manager-core/: Cargo.toml
libs/block-mesh-manager-core/src/: main.rs  state.rs
libs/block-mesh-manager-core/tests/: main.rs
libs/block-mesh-manager-database-domain/: Cargo.toml
libs/block-mesh-manager-database-domain/.sqlx/: query-070be1f3259e737c297bc4c0f4e997238f99f8efe99f4ca01cf81e74b88453d6.json  query-4491f235a2a58507f803b298b958b7d875b6eb7fba83cdd43ae9f6c4489aa468.json  query-4c60a6dd73eb5d7fe8cca826740a245d76f11bc76ec196b2810cfda0fddd45cc.json  query-9679858e7cfd964ce19df835dd748e0041e345ddaf5edf55af31f05b65abce48.json  query-b7a8cd6aefe0cf86d429319a95d8783c7166b9aa55487df760f8180e0a59b55b.json  query-e03c139b3ea6933b5ca5d429a651819b2b046aaed208569a8233f0410e1c03d0.json
libs/block-mesh-manager-database-domain/src/: lib.rs
libs/block-mesh-manager-worker/: Cargo.toml
libs/block-mesh-manager-worker/.sqlx/: query-009de3e7d7097b8c9b88ca775afb039d20d7f6d0d1bd0020b22fff35323a81cb.json  query-0772ad4b121f71f6d1c0f8fcad314206b18ae252d1b865ef249dd58a3bb8f460.json  query-0acd8f0c3a14082d54b4ed68d0ba5781d8dd2f62af18a6ed53f8dca9c7013725.json  query-173f8276e17316fcca55bc14f0b0dd9265b8c76f2e6993d8662a5f36f56ef581.json  query-1b7565523fdd55badbfde4cb89aa37e4e97c8d8366a9585392e5a86764266878.json  query-27d3a395784a95c1c90711d6b863c26859266ea50e64fec9ffcb28860b41f459.json  query-28c0ca10b1f87a8555c3452d8a1b522259351fd57b638307600657e8d7f7cfe9.json  query-2f8c15622fe0366772fef03cb3b05c6df7a121329b1c996ea35fc36e795c677e.json  query-307f38489a98a3261f68704e2f6d1bd4bb6955f45953b91b16d87d1b3982beb9.json  query-30a99d0d0e39c175e05e281caf5a95e0431fa54580fd7e5763b3d8dd0dbb4146.json  query-3328a464f68ed6ce7d14cd24723258adc4f96d6de7a449849024a489d259e6d3.json  query-35ed6c3e74c3aead709b55dd733bcee731079479c6c61d385457b817bf192e68.json  query-38b44cd95963e35cfb45ceff149f36175b972b960a608c3c05d8729cce551b99.json  query-3901e29c5df2069df60fb70db792ed7392c12e252f33ebf7bd41a9f7cac358d6.json  query-43f23e318e82b1942cab713a789e98bf99f875765ecab5e3cfb06da0be9eb0ab.json  query-4c3fb631f0397547f5c96c29ec6e1128e96fbcb872550c3c4c858d5598291fc9.json  query-51b83d6e1cac6e7ae15fea494d05ae3d06b77206c7d9e323ad2f261fd572b83b.json  query-577dddae1e65808b6a515abb73e09e12797e83e49d95365df5ab878614da204e.json  (+36 more)
libs/block-mesh-manager-ws/: Cargo.toml
libs/block-mesh-solana-client/: Cargo.toml
libs/blockmesh-bin/: .gitignore  .taurignore  Cargo.toml  index.html  package.json
libs/blockmesh-cli/: Cargo.toml
libs/clickhouse-processing/: Cargo.toml
libs/cloudflare-adgrams-collector/: Cargo.toml  README.md  package-lock.json  package.json  wrangler.toml
libs/cloudflare-api-token/: Cargo.toml  README.md  package-lock.json  package.json  wrangler.toml
libs/cloudflare-delete-page/: Cargo.toml  README.md  package-lock.json  package.json  wrangler.toml
libs/cloudflare-feature-flags/: Cargo.toml  README.md  package-lock.json  package.json  wrangler.toml
libs/cloudflare-unpacked-extension/: Cargo.toml  package-lock.json  package.json  wrangler.toml
libs/cloudflare-worker-echo-debug/: Cargo.toml  README.md  package-lock.json  package.json  wrangler.toml
libs/cloudflare-worker-ip-data/: Cargo.toml  README.md  package-lock.json  package.json  wrangler.toml
libs/cloudflare-worker-logger-proxy/: .dev.vars  Cargo.toml  README.md  package-lock.json  package.json  wrangler.toml
libs/cloudflare-worker-logs-queue/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  wrangler.toml
libs/dash-with-expiry/: Cargo.toml
libs/data-sink/: Cargo.toml
libs/debug-area/: Cargo.toml
libs/debug-area2/: Cargo.toml
libs/debug-area3/: Cargo.toml
(+2145 files in other folders)
