[workspace]
members = ["libs/*"]
resolver = "2"

[workspace.package]
authors = ["Ohad Dahan <ohaddahan@gmail.com>"]

[patch.crates-io]
## aes-gcm-siv 0.10.3 and curve25519-dalek 3.x pin zeroize to <1.4
## which conflicts with other dependencies requiring zeroize ^1.5.
## We’re patching both crates to unpin zeroize.
##
## For aes-gcm-siv we’re using the same revision Solana uses in
## an (as of now) unreleased commit, see
## https://github.com/solana-labs/solana/commit/01f1bf27994d9813fadfcd134befd3a449aaa0bd
##
## For curve25519-dalek we’re using commit from a PR, see
## https://github.com/dalek-cryptography/curve25519-dalek/pull/606
aes-gcm-siv = { git = "https://github.com/RustCrypto/AEADs", rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef" }
curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", rev = "8274d5cbb6fc3f38cdc742b4798173895cd2a290" }

[workspace.dependencies]
env_logger = { version = "0.11.2" }
structopt = { version = "0.3.26" }
prometheus = { version = "0.13.3" }
pingora = { version = "0.1.0" }
pingora-core = { version = "0.1.0" }
pingora-http = { version = "0.1.0" }
pingora-load-balancing = { version = "0.1.0" }
pingora-proxy = { version = "0.1.0" }
pingora-limits = { version = "0.1.0" }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = { version = "0.4.0" }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tracing-appender = { version = "0.2.0" }
arrayref = { version = "0.3.7" }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
h2 = { version = "0.4.2" }
http = { version = "1.0.0" }
solana-client = { version = "1.18.2" }
solana-program-test = { version = "1.18.2" }
solana-zk-token-sdk = { version = "1.18.2" }
solana-program = { version = "1.18.2" }
solana-sdk = { version = "1.18.2" }
anchor-client = { version = "0.29.0", features = ["async"] }
anchor-lang = { version = "0.29.0" }
anchor-spl = { version = "0.29.0", features = ["spl-associated-token-account", "spl-token", "metadata"] }
claims = { version = "0.7.1" }
serial_test = { version = "3.0.0" }
regex = { version = "1.9.3" }
lazy-regex = { version = "3.0.1" }
typeshare = { version = "1.0.0" }
hex = { version = "0.4.3" }
hmac-sha512 = { version = "1.1.4" }
axum = { version = "0.7.4", features = ["ws", "macros"] }
futures = { version = "0.3" }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = { version = "0.4.0" }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.1", features = ["fs", "trace", "request-id", "util", "cors", "add-extension"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4.22", features = ["clock", "serde"] }
hyper = { version = "1.1.0" }
async-trait = { version = "0.1.68" }
config = { version = "0.14.0" }
tracing-bunyan-formatter = { version = "0.3.7" }
tracing-log = { version = "0.2.0" }
serde-aux = { version = "4.2.0" }
serde = { version = "1.0.164", features = ["derive"] }
anyhow = { version = "1.0.71" }
thiserror = { version = "1.0.40" }
dotenv = { version = "0.15.0" }
secrecy = { version = "0.8", features = ["serde"] }
reqwest = { version = "0.11.18", default-features = false, features = [
  "json",
  "rustls-tls",
  "cookies"
] }
argon2 = { version = "0.5.0", features = ["std"] }
validator = { version = "0.16" }
unicode-segmentation = { version = "1.7.1" }
serde_json = { version = "1" }
axum-login = { version = "0.13.1" }
tower-sessions-sqlx-store = { version = "0.10.0", features = ["postgres"] }
enum-iterator = { version = "2.0.0" }
once_cell = { version = "1.18.0" }
log = { version = "0.4.21" }

[workspace.dependencies.rand]
version = "0.8.5"
features = ["min_const_gen"]

[workspace.dependencies.sqlx]
version = "0.7.3"
default-features = false
features = [
  "any",
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]

[workspace.dependencies.uuid]
version = "1.3.4"
features = [
  "v4", # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
  "serde", # Enable serialization/deserialization of UUIDs
]
