[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
#strip = true
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace]
members = ["libs/*", "programs/*", "libs/blockmesh-bin/src-tauri"]
exclude = ["libs/renaissance-hackathon", "libs/md-book", "libs/installers"]
resolver = "2"

[workspace.lints.rust]
panic = "forbid"
unsafe_code = "forbid"
unused = "forbid"
dead_code = "forbid"

[workspace.lints.clippy]
#all = { level = "deny", priority = 5 }
## cargo = { level = "warn", priority = 5 }
#pedantic = { level = "deny", priority = 5 }
#nursery = { level = "forbid", priority = 5 }
## restriction = { level = "warn", priority = 5 }
#unwrap_used = { level = "forbid", priority = 5 }
#empty_structs_with_brackets = { level = "allow", priority = 5 }
#pub_use = { level = "allow", priority = 5 }
#missing_errors_doc = { level = "allow", priority = 5 }
#multiple_crate_versions = { level = "allow", priority = 5 }
#must_use_candidate = { level = "allow", priority = 5 }
#needless_pass_by_value = { level = "allow", priority = 5 }
#module_name_repetitions = { level = "allow", priority = 5 }
#future_not_send = { level = "allow", priority = 5 }
#redundant_closure_for_method_calls = { level = "allow", priority = 5 }
#unused_async = { level = "allow", priority = 5 } # Only here until IndexedDB refactor

[workspace.package]
authors = ["Ohad Dahan <ohaddahan@gmail.com>"]
version = "0.0.90"

[patch.crates-io]
## aes-gcm-siv 0.10.3 and curve25519-dalek 3.x pin zeroize to <1.4
## which conflicts with other dependencies requiring zeroize ^1.5.
## We’re patching both crates to unpin zeroize.
##
## For aes-gcm-siv we’re using the same revision Solana uses in
## an (as of now) unreleased commit, see
## https://github.com/solana-labs/solana/commit/01f1bf27994d9813fadfcd134befd3a449aaa0bd
##
## For curve25519-dalek we’re using commit from a PR, see
## https://github.com/dalek-cryptography/curve25519-dalek/pull/606
aes-gcm-siv = { git = "https://github.com/RustCrypto/AEADs", rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef" }
curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", rev = "8274d5cbb6fc3f38cdc742b4798173895cd2a290" }

[workspace.dependencies]
sysinfo = { version = "0.30.12" }
tikv-jemallocator = { version = "0.5" }
leptos_axum = { version = "0.6.12" }
leptos-use = { version = "0.10.10" }
leptos_meta = { version = "0.6.12" }
gloo-utils = { version = "0.2.0" }
tracing-subscriber-wasm = { version = "0.1.0" }
num-traits = { version = "0.2.19" }
sendgrid = { version = "0.21.0" }
tracing-wasm = { version = "0.2.1" }
tauri = { version = "2.0.0-beta", features = ["native-tls-vendored"] }
tauri-build = { version = "2.0.0-beta", features = [] }
tauri-plugin-autostart = "2.0.0-beta"
tauri-plugin-single-instance = "2.0.0-beta"
tauri-plugin-updater = "2.0.0-beta"
url-builder = { version = "0.1.1" }
form_urlencoded = { version = "1.2.1" }
auto-launch = { version = "0.5.0" }
whoami = { version = "1.5.1" }
url = { version = "2.5.0" }
leptos = { version = "0.6.11", features = ["tracing"] }
leptos_router = { version = "0.6.11" }
wasm-bindgen = { version = "=0.2.92" }
js-sys = { version = "0.3" }
wasm-bindgen-futures = { version = "=0.4.42" }
serde-wasm-bindgen = { version = "0.6" }
urlencoding = { version = "2.1" }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-test = { version = "0.3.36" }
console_error_panic_hook = { version = "0.1.7" }
cfg-if = { version = "1.0.0" }
console_log = { version = "1.0.0" }
clap = { version = "4.5.2", features = ["derive"] }
bs58 = { version = "0.5.0" }
base64 = { version = "0.22.0" }
bincode = { version = "1.3.3" }
spl-memo = { version = "4.0.0" }
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"] }
env_logger = { version = "0.11.2" }
structopt = { version = "0.3.26" }
prometheus = { version = "0.13.3" }
pingora = { version = "0.1.0" }
pingora-core = { version = "0.1.0" }
pingora-http = { version = "0.1.0" }
pingora-load-balancing = { version = "0.1.0" }
pingora-proxy = { version = "0.1.0" }
pingora-limits = { version = "0.1.0" }
askama = { version = "0.12.1", features = ["with-axum", "serde-json"] }
askama_axum = { version = "0.4.0" }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tracing-appender = { version = "0.2.0" }
arrayref = { version = "0.3.7" }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
sentry = { version = "0.34.0" }
sentry-tracing = { version = "0.34.0" }
h2 = { version = "0.4.2" }
http = { version = "1.0.0" }
solana-client = { version = "=1.18.2" }
solana-program-test = { version = "=1.18.2" }
#solana-zk-token-sdk = { version = "1.18.2" }
solana-account-decoder = { version = "=1.18.2" }
solana-program = { version = "=1.18.2" }
solana-sdk = { version = "=1.18.2" }
anchor-client = { version = "0.29.0", features = ["async"] }
anchor-lang = { version = "0.29.0" }
anchor-spl = { version = "0.29.0", features = ["spl-associated-token-account", "spl-token", "metadata"] }
claims = { version = "0.7.1" }
serial_test = { version = "3.0.0" }
regex = { version = "1.9.3" }
lazy-regex = { version = "3.0.1" }
tempfile = { version = "3.10.1" }
lazy_static = { version = "1.5.0" }
typeshare = { version = "1.0.0" }
hex = { version = "0.4.3" }
hmac-sha512 = { version = "1.1.4" }
axum = { version = "0.7.4", features = ["ws", "macros"] }
futures = { version = "0.3" }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = { version = "0.4.0" }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.1", features = ["fs", "trace", "request-id", "util", "cors", "add-extension"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "json"] }
tracing-serde = { version = "0.1.3" }
chrono = { version = "0.4.22", features = ["clock", "serde", "wasmbind"] }
hyper = { version = "1.1.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
http-body-util = { version = "0.1.1" }
async-trait = { version = "0.1.68" }
config = { version = "0.14.0" }
tracing-bunyan-formatter = { version = "0.3.7" }
tracing-log = { version = "0.2.0" }
serde-aux = { version = "4.2.0" }
serde = { version = "1.0.164", features = ["derive"] }
anyhow = { version = "1.0.71" }
thiserror = { version = "1.0.40" }
dotenv = { version = "0.15.0" }
reqwest = { version = "0.11.18", default-features = false, features = [
  "json",
  "rustls-tls",
  "cookies"
] }
bytes = { version = "1.5.0" }
argon2 = { version = "0.5.0", features = ["std"] }
validator = { version = "0.16" }
unicode-segmentation = { version = "1.7.1" }
serde_json = { version = "1", features = ["raw_value"] }
axum-login = { version = "0.13.1" }
tower-sessions-sqlx-store = { version = "0.10.0", features = ["postgres"] }
enum-iterator = { version = "2.0.0" }
once_cell = { version = "1.18.0" }
log = { version = "0.4.21" }
rustc-hash = { version = "1.1.0" }
worker = { version = "0.3.0" }
tracing-web = { version = "0.1" }
time = { version = "0.3", features = ['wasm-bindgen'] }
ipgeolocate = { version = "0.3.5" }
ipinfo = { version = "3.0.0" }
cargo-husky = { version = "1.5.0", features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt"] }
bcrypt = { version = "0.15" }
cocoa = { version = "0.25.0" }

[workspace.dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "WorkerGlobalScope",
  "Window",
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  "MessageEvent"
]

[workspace.dependencies.rand]
version = "0.8.5"
features = ["min_const_gen"]

[workspace.dependencies.sqlx]
version = "0.7.3"
default-features = false
features = [
  "any",
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "json",
  "bigdecimal"
]

[workspace.dependencies.uuid]
version = "1.3.4"
features = [
  "v4", # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
  "serde", # Enable serialization/deserialization of UUIDs
  "js", # Enable UUID generation in WebAssembly
]

