[package]
name = "ai-interfaces"
version = { workspace = true }
edition = "2021"
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["cookies", "json", "rustls-tls"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["raw_value"] }
dotenv = { workspace = true }
chrono = { workspace = true, features = ["clock", "serde", "wasmbind"] }
async-trait = { workspace = true }
enum-iterator = { workspace = true }

[dependencies.sqlx]
workspace = true
default-features = false
features = [
  "any",
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "json",
  "bigdecimal",
  "tls-rustls"
]
