[package]
name = "axum-ws-extractor"
edition = "2021"
authors.workspace = true
version.workspace = true

[dependencies]
axum = { workspace = true, features = ["ws", "macros"] }
axum-core = { workspace = true }

base64 = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true, default-features = false, features = ["alloc"] }
http = { workspace = true }
http-body = { workspace = true }
hyper = { workspace = true }
sha-1 = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true }
hyper-util = { workspace = true }
async-trait = { workspace = true }

[features]
http2 = ["hyper/http2", "hyper-util/http2"]