[package]
name = "block-mesh-collector"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
aws-sdk-s3 = { workspace = true, features = ["behavior-version-latest"] }
aws-config = { workspace = true, features = ["behavior-version-latest"] }
database-utils = { path = "../database-utils" }
axum = { workspace = true, features = ["ws", "macros"] }
tower-http = { workspace = true, features = ["fs", "trace", "request-id", "util", "cors", "add-extension", "timeout"] }
sentry = { workspace = true }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, default-features = false, features = [
  "multipart",
  "json",
] }
logger-general = { path = "../logger-general", features = ["sentry"] }
url = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true, features = ["clock", "serde", "wasmbind"] }
block-mesh-common = { path = "../block-mesh-common", features = ["ip-data", "feature-flag", "env", "reqwest"] }
serde_json = { workspace = true, features = ["raw_value"] }

[dependencies.sqlx]
workspace = true
default-features = false
features = [
  "any",
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "json",
  "bigdecimal",
  "tls-rustls"
]


[dependencies.uuid]
workspace = true
features = [
  "v4", # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
  "serde", # Enable serialization/deserialization of UUIDs
  "js"
]

[dependencies.rand]
workspace = true
features = ["min_const_gen"]