[package]
name = "block-mesh-common"
version = { workspace = true }
edition = "2021"
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { workspace = true }
borsh = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "time", "json"] }
tracing-serde = { workspace = true }
http-body-util = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
thiserror = { workspace = true }
bs58 = { workspace = true }
hyper = { workspace = true, features = ["full"], optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive"], optional = true }
chrono = { workspace = true, features = ["clock", "serde"] }
anyhow = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true, optional = true, default-features = false, features = [
  "json",
  "hickory-dns"
] }
ipgeolocate = { workspace = true, optional = true }

[dependencies.uuid]
workspace = true
features = [
  "v4", # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
  "serde", # Enable serialization/deserialization of UUIDs
  "js"
]

[features]
http = ["dep:http-body-util", "dep:bytes", "dep:hyper"]
cli = ["dep:clap"]
app-config = ["dep:clap"]
ip-data = ["dep:ipgeolocate", "dep:reqwest"]
