[package]
name = "block-mesh-manager-core"
edition = "2021"
authors.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenv = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
block-mesh-common = { path = "../block-mesh-common", features = ["env"] }

[dev-dependencies]
reqwest = { workspace = true }
reqwest-websocket = { workspace = true }
testcontainers = "0.22.0"
testcontainers-modules = { version = "0.10.0", features = ["postgres"] }
[lints]
workspace = true
