[package]
name = "block-mesh-manager-ws"
edition = "2021"
authors.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sentry = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenv = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
block-mesh-common = { path = "../block-mesh-common", features = ["env"] }
reqwest = { workspace = true }
reqwest-websocket = { workspace = true }
matches = { workspace = true }
logger-general = { path = "../logger-general", features = ["sentry"] }
block-mesh-manager-database-domain = { path = "../block-mesh-manager-database-domain" }
http = { workspace = true }
http-body-util = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["postgres"] }